--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ nav .menu {
 nav.show .menu {
   opacity: 1;
   visibility: visible;
+
   background-color: var(--body-color);
+
   height: 100vh;
   width: 100vw;
 
@@ -181,6 +183,28 @@ nav.show .menu {
 nav ul.grid {
   gap: 4rem;
 }
+
+/******************************** TOGGLE MENU ********************************/
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+  transition: 0.3s;
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+
 /******************************** HOME ********************************/
 
 #home {
