--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?8ek28m');
-  src:  url('fonts/icomoon.eot?8ek28m#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?8ek28m') format('truetype'),
-    url('fonts/icomoon.woff?8ek28m') format('woff'),
-    url('fonts/icomoon.svg?8ek28m#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?h05rh2');
+  src:  url('fonts/icomoon.eot?h05rh2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?h05rh2') format('truetype'),
+    url('fonts/icomoon.woff?h05rh2') format('woff'),
+    url('fonts/icomoon.svg?h05rh2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
